# OligoDesigner

./: INSTALLATION.md  README.md  pyproject.toml
.GitHub/: copilot-instructions.md
src/OligoDesign/: __init__.py  dna.py  oligo.py  structured.py  structured_cli.py
src/OligoDesigner/: __init__.py  cli.py  dna.py  oligo.py  sequence_logo.py  sequence_logo_cli.py  structured.py
tests/: test_dna.py  test_oligo.py  test_structured.py
