[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OligoDesigner"
version = "0.1.0"
description = "DNA oligonucleotide design library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
generate-oligos = "OligoDesigner.cli:main"
generate-structured-oligos = "OligoDesigner.structured_cli:main"
generate-sequence-logo = "OligoDesigner.sequence_logo_cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]
viz = ["logomaker>=0.8", "matplotlib>=3.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
